fixed MegaMan on mobile bug.

--- a/src/scss/_document.scss
+++ b/src/scss/_document.scss
@@ -23,7 +23,7 @@ In this file:
 :root {
     --body-min-width: 325px;
 
-    --body-max-width: 100%;
+    --body-max-width: 100dvw;
     
     --body-min-height: 100%;
 
