--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -71,6 +71,8 @@ In this file:
     --primary-nav-padding-x: var(--container-padding-x);
     
     --primary-nav-padding-y: var(--spacer-2);
+
+    --nav-font-family: var(--font-family-sans-serif);
 }
 
 ////////////////////////////////////////
@@ -81,6 +83,8 @@ In this file:
     list-style: none;
 
     line-height: normal;
+
+    font-family: var(--nav-font-family);
 
     > li:has([class*="nav__dropdown"]) {
         position: relative;
@@ -384,6 +388,8 @@ In this file:
         > li:not(:last-child) {
             margin-bottom: var(--nav-gap);
         }
+
+        padding: var(--nav-gap);
     }
 
     // Primary Nav Components
@@ -793,8 +799,6 @@ In this file:
         inset-inline: 0;
         
         text-align: start;
-
-        z-index: 1000;
         
         display: block;
 
@@ -807,25 +811,35 @@ In this file:
             content: "";
             position: absolute;
             inset: 0;
+
+            display: none;
         }
 
         &::before {
             inset-inline-start: 50%;
             transform: translateX(-50%);
 
-            width: 100vw;
-            height: 100vh;
-            
+            position: absolute;
+
+            width: 100dvw;
+            height: 100dvh;
+
+            max-width: var(--body-max-width);
+
             z-index: -2;
             
             pointer-events: none;
 
-            background-color: hsla(0, 0%, 0%, 0.5);
+            background-color: hsla(0, 0%, 0%, 0.75);
+
+            display: none;
         }
 
         &::after {
             background-color: var(--background-color);
             z-index: -1;
+
+            pointer-events: none;
         }
     }
 
@@ -835,6 +849,10 @@ In this file:
 
             .mega-menu#{$mod} {
                 position: absolute;
+                &::before,
+                &::after {
+                    display: block;
+                }
             }
 
         }
